# SanskritTamilNLP

./: CMakeLists.txt  README.md  Source.txt  fix_bug.md  main_old.cpp
src/: main.cpp  test.cpp
src/core/: GrammarRule.cpp  GrammarRule.h  Token.h  Tokenizer.cpp  Tokenizer.h
src/engine/: Translator.cpp  Translator.h
src/grammar/: SimpleSOVRule.cpp  SimpleSOVRule.h
src/phoneme/: PhonemeMapper.cpp  PhonemeMapper.h
